Fixing spacing on icon page. #75167

--- a/tourismaustralia-styleguide/assets/scss/site/modules/_imagemapcitylink.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/modules/_imagemapcitylink.scss
@@ -54,6 +54,7 @@ a.map-pin-btn {
         padding-top: pxtoem(90px);
     }
   text-align: center;
+  padding-bottom: pxtoem(60px);
 }
 
 .map-with-links-intro {
