--- a/tourismaustralia-styleguide/assets/scss/site/modules/_mosaic.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/modules/_mosaic.scss
@@ -6,7 +6,7 @@
   position: relative;
   width: 100%;
   max-width: pxtoem(1180px);
-  margin: 0 auto 20px;
+  margin: 0 auto;
 }
 
 .mosaic .row.l-row-collapse {
