--- a/tourismaustralia-styleguide/assets/scss/site/modules/_video.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/modules/_video.scss
@@ -57,12 +57,7 @@
 // LARGE VIDEO
 ///////////////
 .video-large-container {
-  max-width: 1200px;
-  padding: 0;
-
-  @include breakpoint(lg){
-    //padding: 0 15px;
-  }
+  padding-bottom: pxtoem($bottom-spacing);
 }
 .video-title-large-video {
   font-family: $font-family-secondary;
